--- a/config.example.json
+++ b/config.example.json
@@ -115,6 +115,11 @@
     "autoRoleUpdater": {
       "enabled": false,
       "interval": 24
+    },
+    "inactivity": {
+      "enabled": false,
+      "channel": "INACTIVITY_LOG_CHANNEL",
+      "maxInactivityTime": 30
     }
   },
   "other": {
