--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "discord.js": "^14.13.0",
     "express": "^4.18.1",
     "fs-promise": "^2.0.3",
-    "hypixel-api-reborn": "^11.0.1",
+    "hypixel-api-reborn": "11.1.0",
     "imgur": "^2.2.0",
     "lodash": "^4.17.21",
     "minecraft-protocol": "^1.54.0",
@@ -53,7 +53,7 @@
     "pretty-ms": "^7.0.1",
     "prismarine-nbt": "^2.2.1",
     "rss-parser": "^3.13.0",
-    "skyhelper-networth": "2.4.1",
+    "skyhelper-networth": "^2.4.1",
     "util": "^0.12.5",
     "winston": "^3.13.0",
     "ws": "^8.16.0"
