feat: alpha player count checker

--- a/config.example.json
+++ b/config.example.json
@@ -61,7 +61,8 @@
       "enabled": true,
       "hypixelNews": true,
       "statusUpdates": true,
-      "skyblockVersion": true
+      "skyblockVersion": true,
+      "alphaPlayerCountTracker": true
     }
   },
   "discord": {
